# MassiveMDS

./: .Rbuildignore  .gitignore  .travis.yml  CMakeLists.txt  CPack.txt  DESCRIPTION  LICENSE  NAMESPACE  README.md  appveyor.yml  configure  configure.ac  cran-comments.md  patch_cmd.txt
.travis/: amd_sdk.sh
CMakeModules/: FindOpenCL.cmake  FindTBB.cmake  Version.cmake  build_VexCL.cmake  build_boost_compute.cmake  build_boost_headers.cmake  build_tbb.cmake  build_xsimd.cmake  version.h.in
R/: AnnotatedTreeReader.R  MassiveMDS.R  RcppExports.R  Untitled.R  mds.R  package.R
inst/extdata/: h3_Deff.txt  h3_large_geo_BMDS_Country_HMC.trees  large.trees
inst/include/CL/: LICENSE.txt
man/: MassiveMDS.Rd  Potential.Rd  computeLoglikelihood.Rd  createEngine.Rd  dmatrixnorm.Rd  engineInitial.Rd  getGradient.Rd  getLogLikelihood.Rd  getdata.Rd  hmcsampler.Rd  readbeast.Rd  setPairwiseData.Rd  setPrecision.Rd  test.Rd  timeTest.Rd  updateLocations.Rd
src/: AbstractMultiDimensionalScaling.hpp  CDF.h  Distance.hpp  Makevars  Makevars.in  Makevars.win  MassiveMDS.cpp  MemoryManagement.hpp  MultiDimensionalScaling.hpp  NewMultiDimensionalScaling.hpp  OpenCLMultiDimensionalScaling.hpp  RcppExports.cpp  aligned_allocator.hpp  benchmark.cpp  benchmark2.cpp  extra_bits.hpp  factory.cpp  flags.h  mds.cpp  sse2neon.h  test.cpp  vendor.cpp
src/backend/nosimd/: CMakeLists.txt
src/backend/opencl/: CMakeLists.txt  OpenCLMemoryManagement.hpp  OpenCLMultiDimensionalScaling.hpp  Reducer.hpp  compute.patch  instantiate.cpp  reduce_fast.hpp  reduce_on_gpu_fast.hpp
src/jni/: README  dr_app_beagle_multidimensionalscaling_NativeMDSSingleton.cpp  dr_app_beagle_multidimensionalscaling_NativeMDSSingleton.h  dr_inference_multidimensionalscaling_NativeMDSSingleton.cpp  dr_inference_multidimensionalscaling_NativeMDSSingleton.h
tests/: testthat.R
tests/testthat/: testLikGrad.R
