CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(mds)

MESSAGE(STATUS "Configuring OpenCL")

OPTION(USE_SYSTEM_BOOST_COMPUTE "Use system boost::compute" OFF)
IF(USE_SYSTEM_BOOST_COMPUTE)
  FIND_PACKAGE(BoostCompute REQUIRED)
ELSE()
  INCLUDE("${CMAKE_MODULE_PATH}/build_boost_compute.cmake")
ENDIF()
INCLUDE_DIRECTORIES(${BoostCompute_INCLUDE_DIRS})

OPTION(USE_SYSTEM_VEXCL "Use system VexCL" OFF)
IF(USE_SYSTEM_VEXCL)
  FIND_PACKAGE(VexCL REQUIRED)
ELSE()
  INCLUDE("${CMAKE_MODULE_PATH}/build_VexCL.cmake")
ENDIF()
INCLUDE_DIRECTORIES(${VexCL_INCLUDE_DIRS})



